# snes-save-state-converter

./: LICENSE  README.md  pyproject.toml
src/snes_save_state_converter/: cli.py  converter.py  state.py
src/snes_save_state_converter/mesen2/: __init__.py  converter.py  coprocessors.py  serializer.py  writer.py
src/snes_save_state_converter/snes9x/: __init__.py  converter.py  coprocessors.py  decoders.py  parser.py
src/snes_save_state_converter/zsnes/: __init__.py  converter.py  parser.py
